# codebase-context

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CODEBASE_CONTEXT.md  DECISIONS.md  HANDOFF.md.migrated  LSP- spec.md  README.md  ccindex-init.sh  pyproject.toml
.claude/: settings.json
.claude/hooks/: rig-health-check.sh  session-end.sh
.codebase-context/: repo_map.md
codebase_context/: __init__.py  chunker.py  cli.py  config.py  db.py  embedder.py  indexer.py  mcp_server.py  memory_store.py  migrate.py  models.py  parser.py  repo_map.py  retriever.py  store.py  utils.py  watcher.py
codebase_context/lsp/: client.py  filters.py  handlers.py  positions.py  router.py
codebase_context/memgram/: mcp_server.py  store.py
docs/: 2026-03-23-engram-integration.md  MEMORY_LAYER_SPEC.md
docs/concepts/: ccindex-three-layer-memory.md  layer1-codemap-on-demand.md  layer3-merge-audit.md
docs/superpowers/plans/: 2026-03-13-codebase-context.md  2026-03-20-lsp-mcp-integration.md  2026-03-23-memgram.md  (+7 more)
docs/teaching/: CURRICULUM.md
tests/: test_chunker.py  test_cli.py  test_cli_lsp.py  test_cli_version.py  test_config.py  test_db.py  test_embedder.py  test_indexer.py  test_lsp_client.py  test_lsp_filters.py  test_lsp_handlers.py  test_lsp_positions.py  test_lsp_router.py  test_mcp_lsp_tools.py  test_mcp_memory_tools.py  test_memgram_mcp.py  test_memgram_store.py  test_memory_store.py  test_migrate.py  test_parser.py  test_repo_map.py  test_retriever.py  test_utils.py
tests/fixtures/: sample_c.c  sample_cpp.cpp  sample_py.py  sample_ts.ts
(+6 files in other folders)
