[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[project]
name        = "codebase-context"
version     = "0.1.0"
description = "Tree-sitter + RAG context management for Claude Code agents"
readme      = "README.md"
requires-python = ">=3.11"

dependencies = [
    "click>=8.1",
    "chromadb>=0.5",
    "fastembed>=0.4",
    "huggingface-hub>=1.0",
    "tree-sitter>=0.23",
    "tree-sitter-c>=0.23",
    "tree-sitter-cpp>=0.23",
    "tree-sitter-javascript>=0.23",
    "tree-sitter-python>=0.23",
    "tree-sitter-typescript>=0.23",
    "watchdog>=4.0",
    "pathspec>=0.12",
    "tqdm>=4.66",
    "mcp>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0"]

[project.scripts]
ccindex = "codebase_context.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["codebase_context"]
